--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,29 @@
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_social?autoReconnect=true&useSSL=false
-spring.datasource.username=root
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://18.222.83.174:5432/ASBPIDENTITYSERVICE
+spring.datasource.username=postgres
 spring.datasource.password=root
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/spring_social?autoReconnect=true&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=root
 
 spring.jpa.show-sql=true
 spring.jpa.hibernatenaming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
+#to reduce app start
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+#oauth setup
 app.auth.tokenSecret=926D96C90030DD58429D2751AC1BDBBC
 app.auth.tokenExpirationMsec=864000000
 app.oauth2.authorizedRedirectUris=http://localhost:4200/oauth2/redirect,myandroidapp://oauth2/redirect,myiosapp://oauth2/redirect
-
-
-base.package.name=corp.asbp
-common.filter.external.services.auth-token=auth-token
-
-asbp.session.validation.url=http://localhost:2020/auth/validateSession
-common.filter.disabled=true
 
 #redis
 redis.hostname = 52.90.218.246
