--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,13 @@
 			<version>${lombak.version}</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.squareup.okhttp</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>2.7.5</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
