--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,14 @@ redis.port = 6379
 redis.ttl.hours = 24
 asbp.redis.password=foobared
 asbp.redis.config.cluster.enabled=false
+
+
+#default guest role
+asbp.guest.role=GUEST
+
+#security settings
+asbp.session.validation.url=http://localhost:8080/auth/validateSession
+common.filter.auth-token=dfc1831a12db41138005ba12cf8e27db
+base.package.name=corp.asbp.platform
+common.filter.external.services.auth-token=auth-token
+#common.filter.disabled=false
