--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://18.222.83.174:5432/ASBPIDENTITYSERVICE
+spring.datasource.url=jdbc:postgresql://asbp-identity-server.crd7dpefg6ya.us-east-2.rds.amazonaws.com:5432/identityserver
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=Asbp123$
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
@@ -33,6 +33,12 @@ asbp.redis.password=foobared
 asbp.redis.config.cluster.enabled=false
 
 
+spring.cache.type=redis
+spring.redis.host=52.90.218.246
+spring.redis.port=6379
+spring.redis.password=foobared
+
+
 #default guest role
 asbp.guest.role=GUEST
 
@@ -41,4 +47,4 @@ asbp.session.validation.url=http://localhost:8080/auth/validateSession
 common.filter.auth-token=dfc1831a12db41138005ba12cf8e27db
 base.package.name=corp.asbp.platform
 common.filter.external.services.auth-token=auth-token
-#common.filter.disabled=false
+common.filter.disabled=true
